2018-01-21  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: New primitives: \ptexversion, \ptexminorversion
	and \ptexrevision.
	* ptex_version.h: pTeX version p3.8.0.

2017-12-21  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: Include zw etc. in "Dimensions can be in units ..."
	help message.

2017-11-30  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: Suppress a space character printed after the name
	of a multibyte control symbol in print_cs().
	* tests/control-symbol.tex: Added.

2017-10-04  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: Direction check in \discretionary.

2017-09-11  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: Assigning the default value frees the KINSOKU table
	and inhibit table, only if global or \currentgrouplevel=0.
	* tests/kinsoku_table.tex: Added.

2017-09-09  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: Remove JFM glue after kinsoku penalty at the top
	of list in adjust_hlist. Do not insert kinsoku penalty when it is
	set to zero.

2017-09-09  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ptftopl.ch: Check for fifth byte (= upper byte of lf) of input JFM.

2017-09-07  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: More restrictions on direction change commands.
	 - Direction change is not allowed in unrestricted horizontal mode,
	   nor math modes.
	 - In external vertical mode, direction change is allowed only if
	   both the current page nor recent contributions do not contain
	   any boxes and rules.
	* ptex_version.h: pTeX version p3.7.2.

2017-04-24  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: p\TeX -> \pTeX.

2017-04-09  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: Fix a bug in single-letter control sequence
	when \endlinechar=-1.
	* tests/endlinechar.tex: Added.

2017-04-06  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>
