@@ -1,5 +1,6 @@
 % This is a change file for PLtoTF
 %
+% (2018-01-27) HY pPLtoTF p2.0 - new JFM spec by texjporg
 % (07/18/2006) ST PLtoTF p1.8 (3.5, Web2c 7.2)
 % (11/13/2000) KN PLtoTF p1.4 (3.5, Web2c 7.2)
 % (03/27/1998) KN PLtoTF p1.3 (3.5, Web2c 7.2)
@@ -15,7 +16,7 @@
 @d banner=='This is PLtoTF, Version 3.6' {printed when the program starts}
 @y
 @d my_name=='ppltotf'
-@d banner=='This is pPLtoTF, Version 3.6-p1.8'
+@d banner=='This is pPLtoTF, Version 3.6-p2.0'
   {printed when the program starts}
 @z
 
@@ -228,6 +229,13 @@ if file_format<>tfm_format then
 else
   lf:=6+lh+(ec-bc+1)+memory[width]+memory[height]+memory[depth]+
     memory[italic]+nl+lk_offset+nk+ne+np;
+@z
+
+@x [131] pTeX:
+@ @d out_size(#)==out((#) div 256); out((#) mod 256)
+@y
+@ @d out_size(#)==out((#) div 256); out((#) mod 256)
+@d out_kanji_code(#)==out_size((#) mod 65536); out((#) div 65536)
 @z
 
 @x [131] l.2256 - pTeX:
@@ -572,13 +580,23 @@ skip_to_paren;
 end
 
 @ Next codes used to write |kanji_type| to \.{JFM}.
+In the original JFM spec by ASCII Corporation, |jis_code| and |char_type|
+were packed into upper (2~bytes) and lower (2~bytes) halfword respectively.
+However, |char_type| is allowed only 0..255,
+so the upper byte of lower halfword was always 0.
+
+In the new JFM spec by texjporg, |jis_code| ``XXyyzz'' is packed into
+first 3~bytes in the form ``yy zz XX'', and |char_type| is packed into
+remaining 1~byte. The new spec is effectively upper compatible with
+the original, and it allows |jis_code| larger than 0x10000 (not really
+useful for me \.{pPLtoTF} but necessary for \.{upPLtoTF}).
 
 @<Output the kanji character type info@>=
 begin out_size(0); out_size(0); { the default }
 for kanji_type_index:=0 to max_kanji do
   begin if kanji_type[kanji_type_index]>0 then
-    begin out_size(index_to_jis(kanji_type_index));
-    out_size(kanji_type[kanji_type_index]);
+    begin out_kanji_code(index_to_jis(kanji_type_index));
+    out(kanji_type[kanji_type_index]);
     if verbose then begin
       print('char index = ', kanji_type_index);
       print(' (jis ');
@@ -616,7 +634,7 @@ else  begin skip_error('This expression is out of JIS-code encoding.');
 end;
 @#
 procedure print_jis_hex(jis_code:integer); {prints jiscode as four digits}
-var dig:array[0..4] of byte; {holds jis hex codes}
+var dig:array[0..3] of byte; {holds jis hex codes}
 i:byte; {index of array}
 begin dig[0]:=Hi(jis_code) div 16; dig[1]:=Hi(jis_code) mod 16;
 dig[2]:=Lo(jis_code) div 16; dig[3]:=Lo(jis_code) mod 16;
