@@ -1,0 +1,22 @@
+#! /bin/sh -vx
+# $Id: newjfm.test 46400 2018-01-21 05:26:27Z hironobu $
+# Copyright 2018 Karl Berry <tex-live@tug.org>
+# You may freely use, modify and/or distribute this file.
+
+test -d uptests || mkdir -p uptests
+
+# Test inputs
+testdir=$srcdir/uptexdir/tests
+
+# Testing upPLtoTF/upTFtoPL for new JFM spec by texjporg.
+for font in testnewu; do
+
+  ./uppltotf -verbose $testdir/$font.pl uptests/x$font.tfm && \
+    cmp $testdir/$font.tfm uptests/x$font.tfm && echo || exit 1
+
+  TEXMFCNF=$srcdir/../kpathsea \
+    ./uptftopl -charcode-format octal -verbose $testdir/$font.tfm uptests/x$font.pl && \
+    diff $testdir/$font.pl uptests/x$font.pl && echo || exit 1
+
+done
+
