@@ -1,9 +1,9 @@
 @x
 @d my_name=='ppltotf'
-@d banner=='This is pPLtoTF, Version 3.6-p1.8'
+@d banner=='This is pPLtoTF, Version 3.6-p2.0'
 @y
 @d my_name=='uppltotf'
-@d banner=='This is upPLtoTF, Version 3.6-p1.8-u1.22'
+@d banner=='This is upPLtoTF, Version 3.6-p2.0-u1.22'
 @z
 
 @x
@@ -15,13 +15,36 @@
 @x
 max_kanji=7237; { maximam number of 2byte characters }
 @y
-max_kanji=65535; { maximam number of 2byte characters }
+max_kanji=1114111; { maximam number of 2byte characters }
 @z
 
 @x function get_next_raw
 if multistrlen(ustringcast(buffer),loc+2,loc)=2 then cur_char:=" "
 @y
 if multistrlen(ustringcast(buffer),loc+3,loc)>1 then cur_char:=" "
+@z
+
+@x procedure print_jis_hex
+var dig:array[0..3] of byte; {holds jis hex codes}
+i:byte; {index of array}
+begin dig[0]:=Hi(jis_code) div 16; dig[1]:=Hi(jis_code) mod 16;
+dig[2]:=Lo(jis_code) div 16; dig[3]:=Lo(jis_code) mod 16;
+for i:=0 to 3 do
+@y
+var dig:array[0..5] of byte; {holds jis hex codes}
+i:byte; {index of array}
+begin dig[0]:=(jis_code div 65536) div 16; dig[1]:=(jis_code div 65536) mod 16;
+dig[2]:=(jis_code div 4096) mod 16; dig[3]:=(jis_code div 256) mod 16;
+dig[4]:=(jis_code div 16) mod 16; dig[5]:=jis_code mod 16;
+for i:=0 to 1 do
+  if (dig[i]<>0)or(dig[0]<>0) then begin { if dig[0]<>0, dig[1] should be always printed }
+    if dig[i]<10 then print(dig[i]) else
+    case dig[i] of
+       10: print('A'); 11: print('B'); 12: print('C');
+       13: print('D'); 14: print('E'); 15: print('F');
+    end;
+  end;
+for i:=2 to 5 do
 @z
 
 @x function valid_jis_code
@@ -34,7 +57,7 @@ if (first_byte<@"21)
 if (second_byte<@"21)or(second_byte>@"7E) then valid_jis_code:=false;
 @y
 begin valid_jis_code:=true;
-if (cx>@"FFFF)or(not is_char_kanji(fromDVI(cx)))
+if (cx>@"10FFFF)or(not is_char_kanji(fromDVI(cx)))
   or(toDVI(fromDVI(cx))<>cx) then valid_jis_code:=false;
 @z
 
@@ -73,6 +96,20 @@ else if (ch='U')or(ch='u') then
   incr(loc); ch:=xord[buffer[loc]]; cx:=cx+todig(ch)*@"100;
   incr(loc); ch:=xord[buffer[loc]]; cx:=cx+todig(ch)*@"10;
   incr(loc); ch:=xord[buffer[loc]]; cx:=cx+todig(ch);
+  { Uxxxx done, following code supports Uxxxxx and Uxxxxxx }
+  incr(loc); ch:=xord[buffer[loc]];
+  if (ch<>' ') then begin {5th digit found, proceed}
+    cx:=cx*@"10+todig(ch);
+    incr(loc); ch:=xord[buffer[loc]];
+    if (ch<>' ') then {6th digit found, proceed}
+      cx:=cx*@"10+todig(ch)
+    else begin {6th digit not found, recover}
+      decr(loc); ch:=xord[buffer[loc]];
+      end
+    end
+  else begin {5th digit not found, recover}
+    decr(loc); ch:=xord[buffer[loc]];
+    end;
   jis_code:=toDVI(fromUCS(cx));
   cur_char:=ch;
   if not valid_jis_code(jis_code) then
